5/29/13 localize tick labels on beaker
5/29/13 fix water formula
5/29/13 use Fort.model instead of Fort.property (second phase)
5/29/13 use Fort.property instead of phetcommon.Property (first phase)
5/29/13 replace DebugOriginNode with scenery.Circle
5/29/13 use new scenery features (getChildrenCount, getChildAt) to manage precipitate particles
5/29/13 fix layout problem with min/max values in concentration display
5/28/13 enable bounds debugging for range labels
# 0.0.0-1 5/28/13
5/28/13 ***** FEATURE COMPLETE *****
5/28/13 fix lint errors
5/28/13 show no decimal places for "0" range value
5/28/13 align concentration display with bottom of beaker
5/28/13 use getCompleteBounds to position sliders, since their values may initially be invisible
5/28/13 update value positions only when type are visible, or scenery barfs
5/28/13 fix bug in saturation indicator
5/28/13 fix layout problem with slider range values
5/28/13 "Solution Volume" slider, with some text layout problems
5/28/13 "Solute Amount" slider, with some text layout problems
5/28/13 replace LinearFunction with dot.Util.linear
5/28/13 add concentration display (has title layout problem)
5/28/13 workaround for layout of invisible SaturatedIndicator, due to change in semantics of scenery bounds
5/24/13 fix lint errors
5/24/13 first attempt at precipitate view, ridiculously slow for some reason
5/24/13 add "Saturated!" indicator
5/24/13 add Solute combo box
5/24/13 port SolutionNode without constructive area geometry
5/24/13 add "Show Values" check box
5/24/13 wrote my own CheckBox, because sun.CheckBox isn't usable with Property and is embedded in a control panel
5/24/13 completed port of beaker view
5/24/13 add visual cue for inside-bottom of beaker
5/24/13 add label to beaker
5/24/13 use rgb values for solute colors
5/24/13 partial port of beaker view
5/24/13 model ported from Java to JS
5/24/13 set up skeleton for Molarity sim
5/24/13 create molarity repo in GitHub