@@ -4,7 +4,6 @@ BUGS
 - displayed values don't match computed values (eg, 0.3 moles / 0.3 L = 1.01 M or 0.99 M)
 
 HIGH
-- try the sliders on the right and the concentration read-out on the left.
 - sliders lag when solution is saturated (particles)
 - switching solute combo box is slow if it involves creating particles
 - multi-line center-justified text, for slider and concentration display titles
